[tool.poetry]
name = "prepapi"
version = "0.1.0"
description = ""
authors = ["Kabeer Akande <46060542+kbakande@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pytest = "^8.3.5"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
